argo-rollout/b_g/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bg-service
  namespace: app_BG
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: BG_APP
