argo-rollout/b_g/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bg-ingress
  namespace: app_bg
  annotations:
    alb.ingress.kubernetes.io/group.name: web
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-014629e7c2ead6914, subnet-0c24208d399fbb90e
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=Berlin
spec:
  ingressClassName: alb
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bg-service
                port:
                  number: 80
